--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
   },
   "dependencies": {
     "@discordjs/rest": "0.1.0-canary.0",
-    "axios": "^0.21.1",
+    "axios": "^0.21.3",
     "discord-api-types": "^0.22.0",
     "discord.js": "^13.1.0",
     "dotenv": "^10.0.0",
+    "node": "16.6.1",
     "ts-node": "^10.2.1"
   }
 }
